fix: fixed display of radio buttons on firefox

--- a/src/scss/_radio-buttons.scss
+++ b/src/scss/_radio-buttons.scss
@@ -2,10 +2,12 @@ label {
     cursor: pointer;
     display: inline-block;
     padding: 1rem 2rem;
+    margin: 0;
 }
 
 input[type="radio"] {
-    opacity: 0;
+    // opacity: 0;
+    display: none;
     margin: 0;
     width: 0;
     padding: 0;
@@ -18,5 +20,4 @@ label+input[type="radio"]+label {
 input[type="radio"]:checked+label {
     background: white;
     color: black;
-    margin: 0;
 }
